@@ -1,5 +1,11 @@
 2008-06-24  Neal H. Walfield  <neal@gnu.org>
 
+	* viengoos.c (main): Move assert from here...
+	* object.c (object_init): ... to here.  Use build_asserts, not
+	asserts to check object sizes.
+
+2008-06-24  Neal H. Walfield  <neal@gnu.org>
+
 	* server.c (server_loop): In object_discarded_clear
 	implementation, if the capability is weak, return EPERM.
 
